syntax = "proto3";
option go_package ="/grpcs/auth/proto";

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    string userId = 1;
    string name = 2;
    string email = 3;
    bool isAdmin = 4;
}

service AuthService {
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {}
}